--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: node_js
 node_js:
   _ "node"
-after_success: coveralls
+script:
+  - nyc npm test && nyc report --reporter=text-lcov | coveralls
