--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "mocha --exit",
     "start": "set DEBUG=app & nodemon app.js",
-    "cover": "istanbul cover node_modules/mocha/bin/mocha",
-    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -31,11 +30,11 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "expect": "^23.6.0",
-    "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.9",
+    "nyc": "^13.1.0",
     "supertest": "^3.3.0"
   }
 }
