--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,21 @@
 language: node_js
 node_js:
-  _ "node"
+  _ "stable"
+install:
+  - npm install
+env:
+  global:
+    - CC_TEST_REPORTER_ID=3a75dcb4c4cecc15938f6b9d85c5347dbe4e96a5663fb0fc2df9ec03539eabe7
+before_script:
+  - chmod 0777 ./node_modules/.bin/mocha
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+script:
+  - npm test
+cache:
+  directories:
+    - "node_modules"
 after_success:
-- npm run coveralls
+  - npm run coveralls
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
