--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
   "homepage": "https://github.com/Akinmyde/Questioner#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "chalk": "^2.4.1",
+    "debug": "^4.1.1",
+    "express": "^4.16.4",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "chalk": "^2.4.1",
     "coveralls": "^3.0.2",
-    "debug": "^4.1.0",
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "expect": "^23.6.0",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "morgan": "^1.9.1",
     "nodemon": "^1.18.9",
     "nyc": "^13.1.0",
     "supertest": "^3.3.0"
