--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "mocha --require babel-register --exit",
     "start": "babel-node app.js",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "serve": "nodemon app.js --exec babel-node"
   },
   "repository": {
