--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ addons:
     repo_token: c7f045c3298c8c7c5fa7bc5546bd86cca597c34316af881193482ba5a5f43895
 script:
   - npm test
-after_success:
-  - npm run coverage
-  - npm run report-coverage
-  - npm run codeclimate-report
+after_script:
+  - npm install -g codeclimate-test-reporter
+  - codeclimate-test-reporter < ./coverage/lcov.info
