--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,21 @@
 language: node_js
 node_js:
   _ "stable"
+install:
+  - npm install
+env:
+  global:
+    - CC_TEST_REPORTER_ID=c7f045c3298c8c7c5fa7bc5546bd86cca597c34316af881193482ba5a5f43895
+before_script:
+  - chmod 0777 ./node_modules/.bin/mocha
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+script:
+  - npm test
 cache:
   directories:
     - "node_modules"
-addons:
-  code_climate
-    repo_token: c7f045c3298c8c7c5fa7bc5546bd86cca597c34316af881193482ba5a5f43895
-script:
-  - npm test
-after_script:
-  - npm install -g codeclimate-test-reporter
-  - codeclimate-test-reporter < ./coverage/lcov.info
+after_success:
+  - npm run coveralls
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
