--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Crowd-source questions for a meetup. Questioner helps the meetup organizer prioritize questions to be answered. Other users can vote on asked questions and they bubble to the top or bottom of the log.",
   "main": "app.js",
   "scripts": {
-    "test": "mocha --require babel-register --exit",
     "start": "babel-node app.js",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
-    "serve": "nodemon app.js --exec babel-node"
+    "serve": "nodemon app.js --exec babel-node",
+    "test1": "SET \"NODE_ENV=test\" SECRET=testsecret &&  nyc --reporter=html --reporter=text mocha test/ --exit --compilers js:babel-core/register"
   },
   "repository": {
     "type": "git",
