--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "babel-node app.js",
-    "test": "export NODE_ENV=test SECRET=testsecret || SET \"NODE_ENV=test\" SECRET=testsecret &&  nyc --reporter=html --reporter=text mocha test/ --exit --compilers js:babel-core/register",
+    "test": "mocha --require babel-register --exit",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "serve": "nodemon app.js --exec babel-node"
   },
