--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_script:
   - ./cc-test-reporter before-build
 script:
   - npm test
+  - codeclimate-test-reporter < ./coverage/lcov.info
 cache:
   directories:
     - "node_modules"
