--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "babel-node app.js",
     "test": "mocha --require babel-register --exit",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
-    "serve": "nodemon app.js --exec babel-node"
+    "serve": "nodemon app.js --exec babel-node",
+    "codeclimate-report": "codeclimate-test-reporter < ./coverage/lcov.info"
   },
   "repository": {
     "type": "git",
