--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "pretest": "export NODE_ENV=test || SET \"NODE_ENV=test\" && npm run migration",
     "test": "npm run pretest && mocha server/test/**/*.test.js --require babel-register --exit",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
-    "serve": "nodemon app.js --exec babel-node",
+    "serve": "nodemon server/app.js --exec babel-node",
     "migration": "babel-node server/models/migration.js",
     "database": "babel-node server/models/database.js"
   },
