--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "main": "app.js",
   "scripts": {
     "start": "babel-node server/app.js",
+    "migration": "babel-node server/migration/index.js",
     "pretest": "export NODE_ENV=test || SET \"NODE_ENV=test\" && npm run migration",
-    "test": "npm run pretest && mocha server/test/**/*.test.js --require babel-register --exit",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/test/**/*.test.js --timeout 10000 --require babel-register --exit",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
-    "serve": "nodemon server/app.js --exec babel-node",
-    "migration": "babel-node server/models/migration.js",
-    "database": "babel-node server/models/database.js"
+    "serve": "nodemon server/app.js --exec babel-node"
   },
-  "repository": {
+  "repository": { 
     "type": "git",
     "url": "git+https://github.com/Akinmyde/Questioner.git"
   },
@@ -39,7 +38,9 @@
     "validate.js": "^0.12.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-register": "^6.26.0",
+    "babel-runtime": "^6.26.0",
     "codeclimate-test-reporter": "^0.5.1",
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
