--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,3 @@
 {
-  "presets": ["env"],
-  "plugins": [
-        ["transform-runtime",
-        {
-            "polyfill": false,
-            "regenerator": true
-        }]
-    ]
+  "presets": ["env"]
 }
