--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
+    "cloudinary": "^1.13.2",
     "coveralls": "^3.0.2",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "lodash.isempty": "^4.4.0",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "password-hash": "^1.2.2",
     "pg": "^7.7.1",
     "validate.js": "^0.12.0"
