--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "cloudinary": "^1.13.2",
+    "cors": "^2.8.5",
     "coveralls": "^3.0.2",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
