[Chore #163581250] refactor server code and fix email issues

--- a/server/.env-example
+++ b/server/.env-example
@@ -4,5 +4,4 @@ SECRET=<string>
 CLOUDINARY_NAME=<string>
 CLOUDINARY_API_KEY=<string>
 CLOUDINARY_API_SECRET=<string>
-EMAIL_USERNAME=<string>
-EMAIL_PASSWORD=<string>
+SENDGRID_API_KEY=<string>
